--- a/public/resources/css/bc-login.css
+++ b/public/resources/css/bc-login.css
@@ -27,20 +27,22 @@ body {
 }
 
 .login-header .logo {
-    width: 200px;
-    margin-bottom: 10px;
+    width: 400px;
+    max-width: 100%;
+    margin-bottom: 1px;
 }
 
 h2 {
     font-size: 1.5em;
     color: #FAFAFA;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .form-group {
     margin-bottom: 15px;
     text-align: left;
-    width: 100%;
+    width: 300px;
+    max-width: 100%; /* Ensure the form group takes up the full width */
 }
 
 .form-group label {
@@ -60,9 +62,16 @@ h2 {
 
 .form-check {
     display: flex;
+    justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
+    width: 322px; /* Adjust the width to match the form-group */
     color: #FAEED8;
+}
+
+.form-check-label {
+    display: flex;
+    align-items: center; /* Center the checkbox vertically */
 }
 
 .form-check-input {
@@ -71,6 +80,7 @@ h2 {
 
 .btn-primary {
     width: 100%;
+    max-width: 300px; /* Limit the max width of the button */
     background-color: #FAEED8;
     color: #503C2F;
     padding: 10px;
@@ -80,6 +90,7 @@ h2 {
     transition: background-color 0.3s;
     font-size: 1em;
     margin-top: 20px;
+    margin-bottom: 30px;
 }
 
 .btn-primary:hover {
@@ -91,15 +102,48 @@ h2 {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    max-width: 300px; /* Limit the max width of the footer */
+    margin: 0 auto; /* Center the footer */
 }
 
-.forgot-password,
+.forgot-password {
+    color: #281000;
+    text-decoration: none;
+    margin-left: auto; /* Pushes the link to the right */
+    margin-right: 0;
+}
+
 .sign-up-link {
-    color: #FAEED8;
+    color: #281000;
     text-decoration: none;
 }
 
-.forgot-password:hover,
+.forgot-password:hover {
+    text-decoration: underline;
+}
+
 .sign-up-link:hover {
     text-decoration: underline;
 }
+
+.signup-text-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.signup-text {
+    color: #FAEED8;
+}
+
+.signup-link {
+    color: #281000;
+    text-decoration: none;
+    margin-left: 5px; /* Adds space between the text and the link */
+}
+
+.signup-link:hover {
+    text-decoration: underline;
+}
+
+
