--- a/public/resources/css/password-reset.css
+++ b/public/resources/css/password-reset.css
@@ -10,8 +10,8 @@ body {
     height: 100vh;
 }
 
-.signup-container {
-    width: 600px;
+.password-reset-container {
+    width: 500px;
     padding: 20px;
     background-color: #503C2F;
     border-radius: 16px;
@@ -20,27 +20,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
 }
 
-.signup-header {
+.password-reset-header {
     margin-bottom: 20px;
-    width: 100%;
 }
 
-.signup-header .logo {
-    width: 400px;
-    margin-bottom: 5px;
+.password-reset-header .logo {
+    width: 200px;
+    margin-bottom: 10px;
 }
 
-.signup-header .line {
-    width: 100%;
-    height: 1px;
-    background-color: #FAEED8;
-    margin: 5px 0;
-}
-
-.signup-container h2 {
+h2 {
     font-size: 1.5em;
     color: #FAFAFA;
     margin-bottom: 20px;
@@ -49,9 +40,7 @@ body {
 .form-group {
     margin-bottom: 15px;
     text-align: left;
-    max-width: 270px;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
 }
 
 .form-group label {
@@ -60,7 +49,7 @@ body {
     color: #FAEED8;
 }
 
-.form-group select {
+.form-group input {
     width: 100%;
     padding: 10px;
     border: 1px solid #ddd;
@@ -70,6 +59,7 @@ body {
 }
 
 .btn-primary {
+    width: 100%;
     background-color: #FAEED8;
     color: #503C2F;
     padding: 10px;
@@ -79,43 +69,20 @@ body {
     transition: background-color 0.3s;
     font-size: 1em;
     margin-top: 20px;
-    width: 100%;
-    max-width: 200px;
-    align-self: center;
 }
 
 .btn-primary:hover {
     background-color: #e0a800;
 }
 
-.btn-secondary {
-    background-color: #FAEED8;
-    color: #503C2F;
-    padding: 10px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-size: 1em;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.btn-secondary:hover {
-    background-color: #e0a800;
-}
-
-.login-link {
-    color: #281000;
-    text-decoration: none;
-    display: block;
+.alert {
     margin-top: 20px;
-    align-self: center;
+    padding: 10px;
+    border-radius: 10px;
+    color: #503C2F;
 }
 
-.login-link:hover {
-    text-decoration: underline;
+.alert-success {
+    background-color: #d4edda;
+    border-color: #c3e6cb;
 }
