--- a/public/resources/css/bc-signup-step3.css
+++ b/public/resources/css/bc-signup-step3.css
@@ -24,20 +24,20 @@ body {
 }
 
 .signup-header {
-    margin-bottom: 10px; /* Adjusted margin-bottom */
+    margin-bottom: 10px;
     width: 100%;
 }
 
 .signup-header .logo {
     width: 400px;
-    margin-bottom: 5px; /* Adjusted margin-bottom */
+    margin-bottom: 5px;
 }
 
 .signup-header .line {
     width: 100%;
     height: 1px;
     background-color: #FAEED8;
-    margin: 10px 0; /* Adjusted margin */
+    margin: 10px 0;
 }
 
 .signup-container h2 {
@@ -52,6 +52,7 @@ body {
     width: 350px;
     max-width: 100%;
     border-radius: 10px;
+    position: relative;
 }
 
 .form-group label {
@@ -67,7 +68,50 @@ body {
     border-radius: 10px;
     background-color: #FAEED8;
     color: #503C2F;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+}
+
+.password-requirements {
+    display: none; /* Hide by default */
+    background-color: #FAEED8;
+    color: white;
+    text-align: left;
+    padding: 10px;
+    border-radius: 4px;
+    position: absolute;
+    top: 120%;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    margin-top: 5px;
+    font-size: 0.875em;
+}
+
+.password-requirements ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.password-requirements li {
+    margin-bottom: 5px;
+}
+
+.password-requirements .valid {
+    color: #4caf50;
+}
+
+.password-requirements .invalid {
+    color: #503C2F;
+}
+
+.form-group input:focus + .password-requirements {
+    display: block; /* Show on focus */
+}
+
+.error {
+    color: #f44336;
+    font-size: 0.875em;
 }
 
 .btn-primary {
@@ -79,10 +123,10 @@ body {
     cursor: pointer;
     transition: background-color 0.3s;
     font-size: 1em;
-    margin-top: 20px; /* Adds space between the last form-group and the button */
+    margin-top: 20px;
     width: 100%;
     max-width: 200px;
-    align-self: center; /* Centers the button */
+    align-self: center;
 }
 
 .btn-primary:hover {
@@ -98,11 +142,11 @@ body {
     cursor: pointer;
     transition: background-color 0.3s;
     font-size: 1em;
-    position: absolute; /* Positions the Back button */
+    position: absolute;
     bottom: 20px;
     left: 20px;
-    text-decoration: none; /* Removes underline */
-    display: inline-block; /* Makes it behave like a button */
+    text-decoration: none;
+    display: inline-block;
 }
 
 .btn-secondary:hover {
