--- a/public/resources/css/bc-signup-step1.css
+++ b/public/resources/css/bc-signup-step1.css
@@ -52,6 +52,8 @@ body {
     max-width: 270px;
     align-items: center;
     justify-content: center;
+    position: relative;
+    padding-bottom: 10px; /* Space for error message */
 }
 
 .form-group label {
@@ -67,6 +69,16 @@ body {
     border-radius: 10px;
     background-color: #FAEED8;
     color: #503C2F;
+}
+
+.form-group .error {
+    color: #f44336;
+    font-size: 0.875em;
+    position: absolute;
+    top: 90%;
+    left: 0;
+    width: 100%;
+    padding-top: 5px;
 }
 
 .btn-primary {
