Commit 1.4.7 Alpha stage

--- a/public/resources/css/unified_login_signup/user_details.css
+++ b/public/resources/css/unified_login_signup/user_details.css
@@ -120,5 +120,6 @@ input, select {
     color: #f44336;
     font-size: 0.875em;
     position: absolute;
-    bottom: -20px;
+    margin-top: 5px;
+    white-space: normal
 }
