--- a/public/resources/css/bc-signup-step3.css
+++ b/public/resources/css/bc-signup-step3.css
@@ -24,26 +24,26 @@ body {
 }
 
 .signup-header {
-    margin-bottom: 10px; /* Adjusted margin-bottom */
+    margin-bottom: 10px;
     width: 100%;
 }
 
 .signup-header .logo {
     width: 400px;
-    margin-bottom: 5px; /* Adjusted margin-bottom */
+    margin-bottom: 5px;
 }
 
 .signup-header .line {
     width: 100%;
     height: 1px;
     background-color: #FAEED8;
-    margin: 10px 0; /* Adjusted margin */
+    margin: 10px 0;
 }
 
 .signup-container h2 {
     font-size: 1.5em;
     color: #FAFAFA;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .form-group {
@@ -52,8 +52,8 @@ body {
     width: 350px;
     max-width: 100%;
     border-radius: 10px;
-    position: relative; /* For positioning the error message */
-    padding-bottom: 20px; /* Space for error message */
+    position: relative;
+    padding-bottom: 40px;
 }
 
 .form-group label {
@@ -93,7 +93,7 @@ body {
     padding: 10px;
     border-radius: 5px;
     position: absolute;
-    top: 105%;
+    margin-top: 10px;
     left: 0;
     width: 100%;
     z-index: 1000;
@@ -119,14 +119,13 @@ body {
     color: #503C2F;
 }
 
-.form-group .error {
+.form-group .error-message {
     color: #f44336;
     font-size: 0.875em;
     position: absolute;
-    top: 75%; /* Move error message closer to the input field */
     left: 0;
     width: 100%;
-    padding-top: 3px;
+    margin-top: 7px;
 }
 
 .btn-primary {
@@ -138,10 +137,10 @@ body {
     cursor: pointer;
     transition: background-color 0.3s;
     font-size: 1em;
-    margin-top: 20px; /* Adds space between the last form-group and the button */
+    margin-top: 20px;
     width: 100%;
     max-width: 200px;
-    align-self: center; /* Centers the button */
+    align-self: center;
 }
 
 .btn-primary:hover {
@@ -157,13 +156,17 @@ body {
     cursor: pointer;
     transition: background-color 0.3s;
     font-size: 1em;
-    position: absolute; /* Positions the Back button */
+    position: absolute;
     bottom: 20px;
     left: 20px;
-    text-decoration: none; /* Removes underline */
-    display: inline-block; /* Makes it behave like a button */
+    text-decoration: none;
+    display: inline-block;
 }
 
 .btn-secondary:hover {
     background-color: #e0a800;
+}
+
+.note {
+    color: #FAEED8;
 }
