--- a/public/resources/css/unified_login_signup/unified_login.css
+++ b/public/resources/css/unified_login_signup/unified_login.css
@@ -11,7 +11,7 @@ body {
 }
 
 .login-container {
-    width: 500px;
+    width: 550px;
     padding: 20px;
     background-color: #503C2F;
     border-radius: 16px;
@@ -20,39 +20,41 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .login-header {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    width: 100%;
 }
 
 .login-header .logo {
     width: 400px;
     max-width: 100%;
-    margin-bottom: -20px;
+    margin-bottom: 1px;
 }
 
-.line {
+.login-header .line {
     width: 100%;
     height: 1px;
     background-color: #FAEED8;
     margin: 10px 0;
 }
 
-h2 {
+.login-container h2 {
     font-size: 1.5em;
     color: #FAFAFA;
-    margin-bottom: 50px;
-    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .form-group {
     margin-bottom: 15px;
     text-align: left;
-    width: 300px;
     max-width: 100%;
+    width: 350px;
+    border-radius: 10px;
     position: relative;
-    padding-bottom: 23px; /* Reduced space for error messages */
+    margin-bottom: 30px;
 }
 
 .form-group label {
@@ -61,7 +63,8 @@ h2 {
     color: #FAEED8;
 }
 
-.form-group input {
+.form-group input,
+.form-group select {
     width: 100%;
     padding: 10px;
     border: 1px solid #ddd;
@@ -77,7 +80,7 @@ h2 {
 
 .toggle-password {
     position: absolute;
-    right: -5px;
+    right: 10px;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
@@ -85,38 +88,14 @@ h2 {
     height: 24px;
 }
 
-.form-group .error {
+.error {
     color: #f44336;
     font-size: 0.875em;
-    position: absolute;
-    top: 75%; /* Move error message closer to the input field */
-    left: 0;
-    width: 100%;
-    padding-top: 3px;
-}
-
-.form-check {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 15px;
-    width: 322px;
-    color: #FAEED8;
-    margin-top: -30px; /* Move it closer to the password field */
-}
-
-.form-check-label {
-    display: flex;
-    align-items: center;
-}
-
-.form-check-input {
-    margin-right: 10px;
+    margin-top: 5px;
+    white-space: normal;
 }
 
 .btn-primary {
-    width: 100%;
-    max-width: 300px;
     background-color: #FAEED8;
     color: #503C2F;
     padding: 10px;
@@ -126,78 +105,96 @@ h2 {
     transition: background-color 0.3s;
     font-size: 1em;
     margin-top: 20px;
-    margin-bottom: 30px;
+    width: 100%;
+    max-width: 300px;
+    align-items: center;
 }
 
 .btn-primary:hover {
     background-color: #e0a800;
 }
 
-.form-footer {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
+.btn-secondary {
+    background-color: #FAEED8;
+    color: #503C2F;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 1em;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    text-decoration: none;
+    display: inline-block;
 }
 
-.forgot-password {
+.btn-secondary:hover {
+    background-color: #e0a800;
+}
+
+.checkbox-group {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-top: -25px;
+}
+
+.checkbox-group label {
+    display: flex;
+    align-items: center;
+    color: #FAEED8;
+    white-space: nowrap;
+}
+
+.checkbox-group input[type="checkbox"] {
+    margin-right: 5px;
+}
+
+.checkbox-group a {
     color: #281000;
     text-decoration: none;
     margin-left: auto;
-    margin-right: 0;
+}
+
+.checkbox-group a:hover {
+    text-decoration: underline;
 }
 
 .sign-up-link {
-    color: #281000;
-    text-decoration: none;
-}
-
-.forgot-password:hover {
-    text-decoration: underline;
-}
-
-.sign-up-link:hover {
-    text-decoration: underline;
-}
-
-.signup-text-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-}
-
-.signup-text {
     color: #FAEED8;
+    text-decoration: none;
+    margin-top: 50px;
+    margin-bottom: -5px;
 }
 
-.signup-link {
+.sign-up-link a {
     color: #281000;
     text-decoration: none;
-    margin-left: 10px;
 }
 
-.signup-link:hover {
+.sign-up-link a:hover {
     text-decoration: underline;
 }
 
 .alert {
-    padding: 15px;
+    padding: 10px;
+    border-radius: 5px;
     margin-bottom: 20px;
-    border: 1px solid transparent;
-    border-radius: 4px;
+    width: 100%;
     text-align: center;
+    transition: opacity 0.5s ease-out;
 }
 
 .alert-success {
-    color: #3c763d;
-    background-color: #dff0d8;
-    border-color: #d6e9c6;
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
 }
 
-.alert-danger {
-    color: #a94442;
-    background-color: #f2dede;
-    border-color: #ebccd1;
+.alert.hide {
+    opacity: 0;
 }
+    
