--- a/resources/css/role-dashboard.css
+++ b/resources/css/role-dashboard.css
@@ -36,13 +36,6 @@ body {
     margin-bottom: 10px;
 }
 
-.barangay-logo-container img {
-    max-width: 100px;
-    max-height: 100px;
-    width: auto;
-    height: auto;
-}
-
 .nav {
     list-style: none;
     padding: 0;
@@ -52,7 +45,7 @@ body {
 
 .nav li {
     width: 100%;
-    margin: 5px 0; /* Adjusted margin for closer spacing */
+    margin: 10px 0;
 }
 
 .nav a,
@@ -66,7 +59,7 @@ body {
     border: none;
     text-align: left;
     border-radius: 8px;
-    margin-bottom: 10px; /* Adjusted margin for closer spacing */
+    margin-bottom: 25px;
 }
 
 .nav a:hover {
@@ -101,20 +94,24 @@ body {
     border-radius: 8px;
     width: 100%;
     padding: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 100px;
     cursor: pointer;
     font-size: 16px;
 }
 
-.logout-button:hover {
-    font-weight: bold;
+.logout-button span {
+    color: var(--primary-color, #503C2F); /* Ensure text color is visible */
+}
+
+.logout-button:hover span {
+    font-weight: bold; /* Make text bold on hover */
 }
 
 .logout-button .icon {
     margin-right: 10px;
     width: 20px;
-    height: 20px;
 }
+
 
 .main-content {
     flex: 1;
