create-barangay-flow

--- a/public/resources/css/create_barangay/create-barangay.css
+++ b/public/resources/css/create_barangay/create-barangay.css
@@ -130,3 +130,9 @@ textarea {
 .btn-primary:hover {
     background-color: #e0a800;
 }
+
+a.disabled {
+    pointer-events: none;
+    color: grey;
+    cursor: not-allowed;
+}
