--- a/resources/css/barangay_captain/customize/bc-customize.css
+++ b/resources/css/barangay_captain/customize/bc-customize.css
@@ -33,6 +33,79 @@
     color: var(--primary-color);
 }
 
+/*appearance section css */
+
+.appearance-container {
+    background-color: var(--theme-color);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    max-width: 800px;
+    margin: 0 auto;
+    color: var(--text-color);
+}
+
+.appearance-container h2 {
+    text-align: center;
+    color: var(--primary-color);
+}
+
+.appearance-form-group {
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
+}
+
+.appearance-form-group label {
+    display: block;
+    margin-bottom: 5px;
+    color: var(--primary-color);
+    flex: 1;
+}
+
+.appearance-form-control {
+    width: 70%;
+    padding: 10px;
+    border: 1px solid var(--primary-color);
+    border-radius: 8px;
+    margin-left: 10px;
+    color: var(--text-color);
+    background-color: var(--secondary-color);
+}
+
+.color-box {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    margin-left: 10px;
+    border-radius: 4px;
+    border: 1px solid var(--primary-color);
+}
+
+.appearance-logo-preview {
+    max-width: 100px;
+    height: 100px;
+    object-fit: contain;
+    margin-left: 10px;
+    display: block;
+    border: 1px solid var(--primary-color);
+}
+
+.appearance-btn-primary {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 8px;
+    cursor: pointer;
+    width: 100%;
+}
+
+.appearance-btn-primary:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+
 .form-group input[type="text"],
 .form-group input[type="email"],
 .form-group input[type="color"],
