--- a/resources/sass/colors.scss
+++ b/resources/sass/colors.scss
@@ -1,7 +1,7 @@
 .bg-brown-primary {
-    background-color: #543b2b !important;
+    background-color: $primary-brown !important;
 }
 
 .bg-brown-secondary {
-    background-color: #f5e9d2 !important;
+    background-color: $secondary-brown !important;
 }
