--- a/resources/sass/colors.scss
+++ b/resources/sass/colors.scss
@@ -5,3 +5,7 @@
 .bg-brown-secondary {
     background-color: $secondary-brown !important;
 }
+
+.text-brown-secondary {
+    color: $secondary-brown !important;
+}
