--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -21,3 +21,7 @@
     --bs-btn-disabled-bg: #{$secondary-brown};
     --bs-btn-disabled-border-color: #{$secondary-brown};
 }
+
+.full-view-height {
+    height: 100vh;
+}
