--- a/resources/css/components/icon-header.css
+++ b/resources/css/components/icon-header.css
@@ -9,6 +9,11 @@
     text-align: left;
 }
 
+.icon-header.brown {
+    background-color: var(--light-brown);
+    color: #fff;
+}
+
 .icon-header img {
     width: 40px;
     height: 40px;
