--- a/resources/sass/colors.scss
+++ b/resources/sass/colors.scss
@@ -6,6 +6,10 @@
     background-color: $secondary-brown !important;
 }
 
+.text-brown-primary {
+    color: $primary-brown !important;
+}
+
 .text-brown-secondary {
     color: $secondary-brown !important;
 }
