--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -10,6 +10,23 @@
 }
 
 .btn-primary-brown {
+    --bs-btn-color: #{$secondary-brown};
+    --bs-btn-bg: #{$primary-brown};
+    --bs-btn-border-color: #{$primary-brown};
+    --bs-btn-hover-color: #{$secondary-brown};
+    --bs-btn-hover-bg: rgb(87, 53, 30);
+    --bs-btn-hover-border-color: rgb(87, 53, 30);
+    --bs-btn-focus-shadow-rgb: 207, 179, 138;
+    --bs-btn-active-color: #{$primary-brown};
+    --bs-btn-active-bg: rgb(87, 53, 30);
+    --bs-btn-active-border-color: rgb(92, 65, 47);
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: rgb(206, 197, 178);
+    --bs-btn-disabled-bg: rgb(61, 47, 37);
+    --bs-btn-disabled-border-color: rgb(61, 47, 37);
+}
+
+.btn-secondary-brown {
     --bs-btn-color: #{$primary-brown};
     --bs-btn-bg: #{$secondary-brown};
     --bs-btn-border-color: #{$secondary-brown};
@@ -30,6 +47,10 @@
     height: 100vh;
 }
 
+.solo-card-container {
+    padding: 1.5rem;
+}
+
 .card.solo-card {
     border-radius: 1rem;
 }
@@ -45,5 +66,10 @@
 
     .card.solo-card {
         border-radius: 0;
+        padding: 0 !important;
+    }
+
+    .solo-card-container {
+        padding: 0;
     }
 }
