--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -11,3 +11,6 @@ $primary-brown: #543b2b;
 $secondary-brown: #f5e9d2;
 
 $secondary-brown-darker: #d9caad;
+$light-blue: #a7d2eb;
+$light-green: #74b7a0;
+$light-brown: #b6977d;
