--- a/resources/sass/colors.scss
+++ b/resources/sass/colors.scss
@@ -6,6 +6,18 @@
     background-color: $secondary-brown !important;
 }
 
+.bg-light-blue {
+    background-color: $light-blue !important;
+}
+
+.bg-light-green {
+    background-color: $light-green !important;
+}
+
+.bg-light-brown {
+    background-color: $light-brown !important;
+}
+
 .text-brown-primary {
     color: $primary-brown !important;
 }
