--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -30,9 +30,7 @@ $light-brown: #b6977d;
 
 // Body
 $body-bg: #fff;
-
-// Border
-$border-color: #543b2b;
+$body-color: black;
 
 // Nav tabs
 $nav-tabs-link-active-bg: $secondary-brown;
