--- a/resources/sass/components.scss
+++ b/resources/sass/components.scss
@@ -8,6 +8,14 @@
     background-color: var(--brgy-primary-color);
 }
 
+.brgy-bg-secondary {
+    background-color: var(--brgy-secondary-color);
+}
+
+.brgy-color-primary {
+    color: var(--brgy-primary-color);
+}
+
 .brgy-color-text {
     color: var(--brgy-text-color);
 }
@@ -18,6 +26,14 @@
 
 .big-header {
     font-size: 3rem !important;
+}
+
+.brgy-sidebar {
+    box-shadow: 4px 0 5px -2px lightgrey;
+}
+
+.brgy-header {
+    box-shadow: 0px 4px 5px -2px lightgrey;
 }
 
 .picture-header {
@@ -61,12 +77,12 @@
 }
 
 .nav-brgy {
-    --bs-nav-link-color: var(--brgy-secondary-color);
-    --bs-nav-link-hover-color: var(--brgy-secondary-color);
+    --bs-nav-link-color: var(--brgy-primary-text-color);
+    --bs-nav-link-hover-color: var(--brgy-primary-hover-color);
 }
 
 .nav-link-brgy {
-    --bs-nav-pills-link-active-color: var(--brgy-primary-color);
+    --bs-nav-pills-link-active-color: var(--brgy-highlight-text-color);
     --bs-nav-pills-link-active-bg: var(--brgy-secondary-color);
 }
 
@@ -134,7 +150,7 @@
     border-radius: 1rem;
 }
 
-.wizard-container > div {
+.wizard-container>div {
     width: 100%;
 }
 
