--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -31,6 +31,7 @@ $light-brown: #b6977d;
 // Body
 $body-bg: #fff;
 $body-color: black;
+$offcanvas-horizontal-width: 300px;
 
 // Nav tabs
 $nav-tabs-link-active-bg: $secondary-brown;
